# ragr

./: .dockerignore  .env.example  .gitignore  .sops.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
app/: __init__.py  config.py  cors.py  database.py  dependencies.py  logging_setup.py  main.py  telemetry.py  worker.py
app/api/: admin.py  api_keys.py  chat.py  models.py  sources.py  users.py
app/middleware/: cors.py  log_context.py  request_id.py
app/models/: __init__.py  content.py  conversation.py  ingestion_job.py  ingestion_source.py  model_api_key.py  rag_model.py  system_prompt_history.py  token_usage.py  user.py
app/schemas/: admin.py  api_keys.py  chat.py  models.py  sources.py
app/services/: budget.py  chunker.py  client_cache.py  crawler.py  crypto.py  embedder.py  generation.py  html.py  ingest.py  r2.py  rate_limit.py  reranker.py  retrieval.py  url_validation.py  users.py  wikipedia.py
k8s/: kustomization.yaml  namespace.yaml
k8s/postgres/: kustomization.yaml  network-policy.yaml  pvc.yaml  service.yaml  statefulset.yaml
k8s/ragr/: deployment.yaml  network-policy.yaml  service.yaml
k8s/ragr-worker/: deployment.yaml  network-policy.yaml
k8s/secrets/: ghcr-pull-secret.sealed.yaml  kustomization.yaml  ragr-secrets.sealed.yaml  sealed-secrets-pub.pem
migrations/: env.py
migrations/versions/: 45e52081bb3a_add_greeting_field_to_rag_models.py  474a0de3a18d_add_ingestion_jobs_table.py  5cb2a1d46d26_initial_schema_with_pgvector.py  a1b2c3d4e5f6_multi_tenant_ragr_schema.py  a8b9c0d1e2f3_add_users_table.py  b1c2d3e4f5a6_sources_api_columns.py  b9c0d1e2f3g4_rename_question_answer_to_message_response.py  c3d4e5f6a7b8_conversation_status_enum.py  d4e5f6a7b8c9_add_reranker_columns.py  e5f6a7b8c9d0_add_check_constraints_and_index.py  f6a7b8c9d0e1_add_model_api_keys_and_public_access.py  t1u2v3w4x5y6_add_soft_deletes.py  (+19 more)
tests/: conftest.py
(+27 files in other folders)
