[project]
name = "ragr"
version = "0.4.0"
description = "Multi-tenant RAG platform"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Charlie Willis"}]
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=4.0.0",
    "anthropic>=0.52.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.13.0",
    "fastapi>=0.134.0",
    "httpx>=0.28.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.47",
    "uvicorn>=0.41.0",
    "voyageai>=0.3.2",
    "clerk-backend-api>=1.0.0",
    "cryptography>=44.0.0",
    "boto3>=1.35.0",
    "safehttpx>=0.1.7",
    "lxml>=5.0.0",
]

[project.urls]
Repository = "https://github.com/cjwillis48/ragr"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "time-machine>=2.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: marks tests that take >1s"]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",  # pymupdf SWIG bindings
]
